WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229030
[ATK] Critical warnings on children-changed::add signal emission
https://bugs.webkit.org/show_bug.cgi?id=229030
Summary
[ATK] Critical warnings on children-changed::add signal emission
Carlos Garcia Campos
Reported
2021-08-12 03:35:57 PDT
(WebKitWebProcess:53022): Atk-CRITICAL **: 12:18:23.108: atk_state_set_contains_state: assertion 'ATK_IS_STATE_SET (set)' failed (WebKitWebProcess:53022): GLib-GObject-CRITICAL **: 12:18:23.108: g_object_unref: assertion 'G_IS_OBJECT (object)' failed (WebKitWebProcess:53022): Atk-CRITICAL **: 12:18:23.108: atk_state_set_contains_state: assertion 'ATK_IS_STATE_SET (set)' failed (WebKitWebProcess:53022): GLib-GObject-CRITICAL **: 12:18:23.108: g_object_unref: assertion 'G_IS_OBJECT (object)' failed (WebKitWebProcess:53022): Atk-CRITICAL **: 12:18:23.108: atk_state_set_contains_state: assertion 'ATK_IS_STATE_SET (set)' failed (WebKitWebProcess:53022): GLib-GObject-CRITICAL **: 12:18:23.109: g_object_unref: assertion 'G_IS_OBJECT (object)' failed (WebKitWebProcess:53022): Atk-CRITICAL **: 12:18:23.109: atk_state_set_contains_state: assertion 'ATK_IS_STATE_SET (set)' failed (WebKitWebProcess:53022): GLib-GObject-CRITICAL **: 12:18:23.109: g_object_unref: assertion 'G_IS_OBJECT (object)' failed We should implement AtkObjectClass::ref_state_set in WebKitWebPageAccessibilityObject
Attachments
Patch
(2.26 KB, patch)
2021-08-12 03:39 PDT
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2021-08-12 03:39:44 PDT
Created
attachment 435407
[details]
Patch
Carlos Garcia Campos
Comment 2
2021-08-12 06:51:26 PDT
Committed
r280964
(
240470@main
): <
https://commits.webkit.org/240470@main
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug