[ATK] Critical warnings on children-changed::add signal emission https://bugs.webkit.org/show_bug.cgi?id=229030

Reviewed by Michael Catanzaro.

Implement AtkObjectClass::ref_state_set.

* WebProcess/WebPage/atk/WebKitWebPageAccessibilityObject.cpp:
(webkitWebPageAccessibilityObjectRefStateSet): Return our child state set.
(webkit_web_page_accessibility_object_class_init): Add an implementation for AtkObjectClass::ref_state_set.

Canonical link: https://commits.webkit.org/240470@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280964 268f45cc-cd09-0410-ab3c-d52691b4dbfc